# ImmortalsSender

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
inc/: delays.h  main.h  nrf24l01.h  nrf24l01_2.h
libraries/STM32F2xx_StdPeriph_Driver/inc/: stm32f2xx_spi.h
libraries/STM32F2xx_StdPeriph_Driver/src/: stm32f2xx_spi.c
libraries/lwip_v1.3.2/port/STM32F2x7/Standalone/: ethernetif.c
pca10040/blank/arm5_no_packs/: JLinkLog.txt  esb_low_power_ptx_pca10040.uvguix.Alireza  esb_low_power_ptx_pca10040.uvoptx  esb_low_power_ptx_pca10040.uvprojx
pca10040/blank/arm5_no_packs/_build/: app_error.crf  app_error.d  app_error_handler_keil.crf  app_error_handler_keil.d  app_error_weak.crf  app_error_weak.d  app_util_platform.crf  app_util_platform.d  arm_startup_nrf52.lst  boards.crf  boards.d  esb_low_power_ptx_pca10040_nrf52832_xxaa.dep  main.crf  main.d  nrf52832_xxaa.axf  nrf52832_xxaa.build_log.htm  nrf52832_xxaa.hex  nrf52832_xxaa.htm  nrf52832_xxaa.lnp  nrf52832_xxaa.map  nrf_assert.crf  nrf_assert.d  nrf_atomic.crf  nrf_atomic.d  nrf_balloc.crf  nrf_balloc.d  nrf_drv_uart.crf  nrf_drv_uart.d  nrf_esb.crf  nrf_esb.d  nrf_fprintf.crf  nrf_fprintf.d  nrf_fprintf_format.crf  nrf_fprintf_format.d  nrf_log_backend_rtt.crf  nrf_log_backend_rtt.d  nrf_log_backend_serial.crf  nrf_log_backend_serial.d  nrf_log_backend_uart.crf  nrf_log_backend_uart.d  (+26 more)
pca10056/blank/arm5_no_packs/: JLinkLog.txt  esb_low_power_ptx_pca10056.uvguix.Alireza  esb_low_power_ptx_pca10056.uvoptx  esb_low_power_ptx_pca10056.uvprojx
pca10056/blank/arm5_no_packs/RTE/_nrf52840_xxaa/: RTE_Components.h
pca10056/blank/arm5_no_packs/Utils/: myNRF.h  mylog.c  mylog.h
pca10056/blank/arm5_no_packs/Wiznet/: user_ethernet.c  user_ethernet.h  user_spi.c  user_spi.h
pca10056/blank/arm5_no_packs/Wiznet/ioLibrary_Driver/Ethernet/: socket.c
pca10056/blank/arm5_no_packs/_build/: app_error.crf  app_error.d  app_error_handler_keil.crf  app_error_handler_keil.d  app_error_weak.crf  app_error_weak.d  app_fifo.crf  app_fifo.d  app_uart.crf  app_uart.d  app_uart_fifo.crf  app_uart_fifo.d  app_util_platform.crf  app_util_platform.d  arm_startup_nrf52840.lst  boards.crf  boards.d  esb_low_power_ptx_pca10056_nrf52840_xxaa.dep  log.crf  log.d  main.crf  main.d  mylog.crf  mylog.d  nrf52840_xxaa.axf  nrf52840_xxaa.build_log.htm  nrf52840_xxaa.hex  nrf52840_xxaa.htm  nrf52840_xxaa.lnp  nrf52840_xxaa.map  nrf_assert.crf  nrf_assert.d  nrf_atomic.crf  nrf_atomic.d  nrf_balloc.crf  nrf_balloc.d  nrf_drv_uart.crf  nrf_drv_uart.d  nrf_esb.crf  nrf_esb.d  (+49 more)
pca10056/blank/config/: sdk_config.h
project/: ImmortalsSender.uvproj
source/: main.cpp  pch.h  udp_echoserver.c
src/: config.h  delays.c  main.c  netconf.c  nrf24l01.c  nrf24l01_2.c  stm32f2x7_eth_bsp.c  stm32f2xx_it.c  udp_echoserver.c
